ansible/roles/placeos.networkpolicies/templates/allow-external.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-external-access
spec:
  podSelector:
    matchLabels:
      networking/allow-external-access: "true"
  policyTypes:
  - Ingress
  ingress:
  - {}
# NOTE. This should be narrowed down to expected external ip address ranges
